<resources>
    <string name="app_name">VSafe</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="marine">2021 Marine</string>
    <string name="assembly_guide">Assembly Guide</string>
    <string name="testing_guide">Testing Guide</string>
    <string name="start_test">Start Test</string>
    <string name="stop_test">Stop Test</string>
    <string name="connected_to">Connected To:</string>

    <string name="simple">Simple   Smart   Secure</string>
    <string name="trys"> Create <font color="#257fc6">your profile </font> to access the VSafe app</string>
    <string name="safe"> Which <font color="#257fc6"> Device </font> would you like to set up.</string>
    <string name="Shop_timing"> <font color="#FFFFF"> Monday to Sunday: </font> 09:00 AM to 07:00 PM.  </string>
    <string name="History"> Set Up <font color="#257fc6">  Your History  </font> to secure the VSafe App.</string>
    <string name="title_activity_home">Home</string>
    <string name="address">Thumbikkai Business Solutions LLP, \n 15, First Floor,\n West New Street,\n Thirunageswaram, \n Tamil Nadu - 612 204.</string>
    <string name="title_home">Home</string>
    <string name="Terms">The Terms of Service Agreement is mainly used for legal purposes by companies which provide software or services, such as web browsers, e-commerce, web search engines, social media, and transport services.

A legitimate terms-of-service agreement is legally binding and may be subject to change.[2] Companies can enforce the terms by refusing service. Customers can enforce by filing a lawsuit or arbitration case if they can show they were actually harmed by a breach of the terms. There is a heightened risk of data going astray during corporate changes, including mergers, divestitures, buyouts, downsizing, etc., when data can be transferred improperly,The Terms of Service Agreement is mainly used for legal purposes by companies which provide software or services, such as web browsers, e-commerce, web search engines, social media, and transport services.

A legitimate terms-of-service agreement is legally binding and may be subject to change.[2] Companies can enforce the terms by refusing service. Customers can enforce by filing a lawsuit or arbitration case if they can show they were actually harmed by a breach of the terms. There is a heightened risk of data going astray during corporate changes, including mergers, divestitures, buyouts, downsizing, etc., when data can be transferred improperly,The Terms of Service Agreement is mainly used for legal purposes by companies which provide software or services, such as web browsers, e-commerce, web search engines, social media, and transport services.

A legitimate terms-of-service agreement is legally binding and may be subject to change.[2] Companies can enforce the terms by refusing service. Customers can enforce by filing a lawsuit or arbitration case if they can show they were actually harmed by a breach of the terms. There is a heightened risk of data going astray during corporate changes, including mergers, divestitures, buyouts, downsizing, etc., when data can be transferred improperly,The Terms of Service Agreement is mainly used for legal purposes by companies which provide software or services, such as web browsers, e-commerce, web search engines, social media, and transport services.

A legitimate terms-of-service agreement is legally binding and may be subject to change.[2] Companies can enforce the terms by refusing service. Customers can enforce by filing a lawsuit or arbitration case if they can show they were actually harmed by a breach of the terms. There is a heightened risk of data going astray during corporate changes, including mergers, divestitures, buyouts, downsizing, etc., when data can be transferred improperly,The Terms of Service Agreement is mainly used for legal purposes by companies which provide software or services, such as web browsers, e-commerce, web search engines, social media, and transport services.

A legitimate terms-of-service agreement is legally binding and may be subject to change.[2] Companies can enforce the terms by refusing service. Customers can enforce by filing a lawsuit or arbitration case if they can show they were actually harmed by a breach of the terms. There is a heightened risk of data going astray during corporate changes, including mergers, divestitures, buyouts, downsizing, etc., when data can be transferred improperly</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="check">By Proceeding, Yes agree to Vsafe\'s conditions of \n use all the <font color="#257fc6"> <b> Terms &amp; Condition</b> </font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="tri">To Register Your<font color="#257fc6"> Mobile Device</font> With V-safe</string>
    <string name="pri">I confirm I have read the <font color="#257fc6"><b>Privacy Policy</b></font></string>
    <string name="pro">Setup Your<font color="#257fc6"> Device</font> With</string>
    <string name="fin">Set  Your<font color="#257fc6"> Finger</font> At The Sensor</string>
    <string name="profile">Set Up <font color="#257fc6">Your Profile</font> to secure the</string>
    <string name="create"><font color="#257fc6"><b>Create Locker Pin</b></font></string>
    <string name="please"> Please Place Your <font color="#257fc6">Finger</font></string>
</resources>